--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.Heading {
+  border: 1px solid rgb(0, 0, 0);
+  width: 300px;
+  margin-left: 200px;
+  display: flex;
+  justify-content: center;
+  padding: 8px;
+}
+
+.input {
+  font-size: small;
+  font-style: italic;
+}
+
+.Submit {
+  background-color: blue !important;
+  width: 130px !important;
+  height: 40px !important;
+  margin-left: 280px !important;
 }
